# Do_an_2

Gateway/common/http_server_app/: http_server_app.c  http_server_app.h
Gateway/main/: app_main.c
Node_Sensor/main/: CMakeLists.txt  app_main.c
